# bmstu_5th_sem

AA/lab_01/: CMakeLists.txt  main.cpp
AA/lab_01/inc/: algorithms.h  allocation.h  print_matrix.h
AA/lab_01/src/: algorithms.cpp  allocation.cpp  print_matrix.cpp
AA/lab_01_new/: Makefile  main.c
AA/lab_01_new/inc/: algorithms.h  alloc_mtrx.h
AA/lab_01_new/src/: algorithms.c  alloc_mtrx.c
AA/lab_02/: main.cpp
AA/lab_02/inc/: matrix.h
AA/lab_02/src/: matrix.cpp
DB/lab_01/: Vet.drawio  constraints.sql  copy.sql  generate_db.py  script.sql  superviser.csv
DB/lab_01/data/: cages.csv  diseas.csv  disease_pet.csv  doctor_pet.csv  doctors.csv  pTreatment.csv  pTreatment_pet.csv  pet.csv
DB/lab_02/: sql_requests.sql
DB/lab_03/: sql_modules.sql
DB/lab_04/: main.sql
DB/lab_05/: main.sql
DB/rk_01/: main.sql
DB/rk_03/: main.py  script.sql
